@@ -14,6 +14,8 @@ Changes log
           org.restlet.ext.servlet package.
         - Fixed potential NPE with the Extractor.
           Reported by Graham Smith.
+        - Fixed parsing of nc parameter and fixed potential endless 
+          loop in HttpDigestHelper. Reported by Mark Drew.
           
 - 2.0 Release Candidate 2 (2010-03-30)
     - API changes
